fixing background image z-index and width

--- a/themes/static/themes/millennials/css/millennials_layout.scss
+++ b/themes/static/themes/millennials/css/millennials_layout.scss
@@ -210,7 +210,8 @@ ul.faces{
 }
 
 .background-photo{
-  width: 80%;
+  z-index: -100;
+  width: 100%;
   height: 100%;
   position: absolute;
   background-repeat: no-repeat;
